src/objects/AM_Location__c.object
<CustomObject>
    <fields>
        <fullName>AM_Building__c</fullName>
        <description>This field is to store Buiding Name of Location</description>
        <inlineHelpText>Enter Building Name</inlineHelpText>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Floor__c</fullName>
        <description>This field stores Floor detail for location</description>
        <inlineHelpText>Enter Floor</inlineHelpText>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Position__c</fullName>
        <description>this field stores Position of location</description>
        <inlineHelpText>Enter Position of Location</inlineHelpText>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Zone__c</fullName>
        <description>It storesZone detail for location</description>
        <inlineHelpText>Enter Zone for Location.</inlineHelpText>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Location</fullName>
        <columns>NAME</columns>
        <columns>AM_Building__c</columns>
        <columns>AM_Floor__c</columns>
        <columns>AM_Position__c</columns>
        <columns>AM_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Location</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>